# game-library-frontend

./: .gitignore  Cargo.toml  Makefile  README.md  askama.toml  config.toml.sample
.github/: dependabot.yml
.github/workflows/: tests.yml
app/: .gitignore  flags.html  index.html  new.html  package-lock.json  package.json  project.html  projects.html  publishers.html  root.html  search.html  tags.html  vite.config.js
app-search/: package-lock.json  package.json
app-search/src/: Search.svelte  projects.js
app-search/src/lib/: params.js
app/public/gl/css/: gl.css
app/public/gl/js/: client.js  common.js  datalist-ajax.js  project.js  projects.js  util.js
app/public_testing/: site.webmanifest
app/public_testing/css/: site.css
app/src/: App.svelte  Autocomplete.svelte  AutocompleteInput.svelte  ChipInput.svelte  CountingTextArea.svelte  ErrorBox.svelte  FileSection.svelte  FlagDialog.svelte  FlagsPage.svelte  Footer.svelte  GalleryEditor.svelte  GalleryEditorItem.svelte  GalleryItem.svelte  GallerySection.svelte  GameEditor.svelte  GameSection.svelte  Header.svelte  NewProjectPage.svelte  PackageEditor.svelte  PackageSection.svelte  PackagesSection.svelte  PlayersSection.svelte  ProjectEditor.svelte  ProjectList.svelte  ProjectListItem.svelte  ProjectListSort.svelte  ProjectPage.svelte  ProjectSection.svelte  ProjectsPage.svelte  PublisherInput.svelte  PublishersPage.svelte  ReadmeSection.svelte  ReleaseSection.svelte  RootPage.svelte  Search.svelte  SearchPage.svelte  SearchPageGuts.svelte  TagsPage.svelte  UserChip.svelte  UserChipInput.svelte  (+9 more)
app/src/lib/: base64.js  client.js  module.js  params.js  search.js  setup.js  util.js  util.test.js
game-library-frontend/: Cargo.toml  README.md
game-library-frontend/app/: new.html  package-lock.json  package.json  project.html
game-library-frontend/app/src/: CountingTextArea.svelte  FlagDialog.svelte  FlagsPage.svelte  GalleryEditor.svelte  GalleryEditorItem.svelte  GallerySection.svelte  GameEditor.svelte  GameSection.svelte  NewProjectPage.svelte  PackageEditor.svelte  PackageSection.svelte  PackagesSection.svelte  PlayersSection.svelte  ProjectEditor.svelte  ProjectList.svelte  ProjectSection.svelte  PublisherInput.svelte  PublishersPage.svelte  ReadmeSection.svelte  ReleaseSection.svelte  RootPage.svelte  SearchPage.svelte  TagsInput.svelte  UserChip.svelte  UsersInput.svelte  new.js  projects.js  search.js
game-library-frontend/app/src/lib/: client.js  search.js  util.test.js
game-library-frontend/src/: main.rs
site/gl/css/: gl.css
site/gl/js/: client.js  common.js  project.js  projects.js
src/: main.rs
static/gl/css/: gl.css
static/gl/js/: project.js  projects.js
templates/: base.html  project.html  projects.html
