[package]
name = "game-library-frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.14", features = ["serde_json"] }
axum = { version = "0.8", features = ["http1", "http2", "macros", "query", "tokio"] }
bytes = "1.10"
futures = "0.3"
glc = { path = "../game-library-common" }
http = "1.3"
mime = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "fs", "set-header", "timeout", "trace"] }
tracing = "0.1"
urlencoding = "2.1"
